# simulador-de-horas-API

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml  example.xlsx  pyproject.toml  user_mongo.json
add_hours/: main.py
add_hours/application/dto/request/: activity.py  student.py
add_hours/application/dto/response/: activity.py  student.py
add_hours/application/exceptions/: bad_request.py  conflict.py  http_exception.py  not_found.py  unauthorized.py  unprocessable_entity.py
add_hours/application/security/: IAuthRepository.py
add_hours/application/services/: activity_service.py  activity_type_service.py  auth_service.py  storage_service.py  student_service.py  submit_service.py
add_hours/application/services/utils/: create_xlsx.py
add_hours/domain/models/activity/: activity.py  activity_type.py
add_hours/domain/models/auth/: user.py
add_hours/domain/models/student/: student.py
add_hours/domain/repository/: activity_repository_interface.py  activity_type_repository_interface.py  storage_repository_interface.py  student_repository_interface.py  submit_repository_interface.py
add_hours/infra/minio/: storage_repository.py
add_hours/infra/motor/: database_setup.py
add_hours/infra/smtp/: SubmitRepository.py
add_hours/routes/: activity_router.py  activity_type_router.py  auth_router.py  certificate_router.py  fastapi_setup.py  student_router.py  submit_email_router.py
add_hours/routes/styles/: swagger_ui.css
add_hours/utils/: camel_case.py  init_services.py  pydantic_object_id.py
config/: .env
(+8 files in other folders)
