[tool.poetry]
name = "horas-sim-backend"
version = "0.1.0"
description = ""
authors = ["DFox <vhsdl.eng19@uea.edu.br>"]
readme = "README.md"
packages = [{ include = "add_hours" }]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.100.1"
uvicorn = { extras = ["standard"], version = "^0.23.2" }
python-multipart = "^0.0.6"
python-dotenv = "^1.0.0"
black = "^23.7.0"
pydantic = "^2.2.1"
motor = "^3.2.0"
unidecode = "^1.3.6"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
minio = "^7.1.16"
email-validator = "^2.0.0.post2"
pypdf2 = "^3.0.1"
xlsxwriter = "^3.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
start = "add_hours.main:start"
